some java and php solutions